Add Windows compatibility fixes and wandb offline mode
- Add normalize_to_neg_one_to_one() helper function for multiprocessing
- Replace lambda functions with named function for Windows pickle compatibility
- Change num_workers=16 to num_workers=0 for Windows
- Add wandb.init(mode='offline') for local logging without internet
- Enable wandb offline mode (option 3) for local experiment tracking

--- a/A3_PartB/A3_PartB/run_diffusion.ipynb
+++ b/A3_PartB/A3_PartB/run_diffusion.ipynb
@@ -102,159 +102,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# # Set up the environment\n",
-    "# !pip install -r requirements.txt"
+    "!pip install -r requirements.txt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Namespace(time_steps=2, train_steps=100, save_folder='./test_run', data_path='./data/train', load_path=None, data_class='cat', image_size=32, batch_size=32, learning_rate=0.001, unet_dim=16, unet_dim_mults=[1, 2, 4, 8], fid=False, save_and_sample_every=100, visualize=False)\n",
+      "Namespace(time_steps=2, train_steps=5, save_folder='./test_run_20251128_003941', data_path='./data/train', load_path=None, data_class='cat', image_size=16, batch_size=16, learning_rate=0.001, unet_dim=16, unet_dim_mults=[1, 2, 4, 8], fid=False, save_and_sample_every=1, visualize=False)\n",
       "dataset length: 5065, dataset class: cat\n",
+      "wandb: Tracking run with wandb version 0.23.0\n",
+      "wandb: W&B syncing is set to `offline` in this directory. Run `wandb online` or set WANDB_MODE=online to enable cloud syncing.\n",
+      "wandb: Run data is saved locally in c:\\--DPM-MAIN-DIR--\\windsurf_projects\\Variational-Autoencoder-and-Diffusion-Models-on-Animal-Faces-HQ-dataset__CVA_3\\A3_PartB\\A3_PartB\\wandb\\offline-run-20251128_003945-qjwedou4\n",
       "\n",
-      "steps:   0%|          | 0/100 [00:00<?, ?it/s]\n",
-      "steps:   1%|          | 1/100 [00:00<01:33,  1.06it/s]\n",
-      "steps:   2%|▏         | 2/100 [00:01<01:07,  1.45it/s]\n",
-      "steps:   3%|▎         | 3/100 [00:01<00:59,  1.62it/s]\n",
-      "steps:   4%|▍         | 4/100 [00:02<00:57,  1.66it/s]\n",
-      "steps:   5%|▌         | 5/100 [00:03<00:54,  1.75it/s]\n",
-      "steps:   6%|▌         | 6/100 [00:03<00:51,  1.81it/s]\n",
-      "steps:   7%|▋         | 7/100 [00:04<00:50,  1.85it/s]\n",
-      "steps:   8%|▊         | 8/100 [00:04<00:49,  1.87it/s]\n",
-      "steps:   9%|▉         | 9/100 [00:05<00:48,  1.89it/s]\n",
-      "steps:  10%|█         | 10/100 [00:05<00:46,  1.92it/s]\n",
-      "steps:  11%|█         | 11/100 [00:06<00:46,  1.93it/s]\n",
-      "steps:  12%|█▏        | 12/100 [00:06<00:46,  1.91it/s]\n",
-      "steps:  13%|█▎        | 13/100 [00:07<00:45,  1.89it/s]\n",
-      "steps:  14%|█▍        | 14/100 [00:07<00:47,  1.82it/s]\n",
-      "steps:  15%|█▌        | 15/100 [00:08<00:49,  1.70it/s]\n",
-      "steps:  16%|█▌        | 16/100 [00:09<00:49,  1.71it/s]\n",
-      "steps:  17%|█▋        | 17/100 [00:09<00:47,  1.76it/s]\n",
-      "steps:  18%|█▊        | 18/100 [00:10<00:45,  1.80it/s]\n",
-      "steps:  19%|█▉        | 19/100 [00:10<00:44,  1.84it/s]\n",
-      "steps:  20%|██        | 20/100 [00:11<00:42,  1.86it/s]\n",
-      "steps:  21%|██        | 21/100 [00:11<00:42,  1.87it/s]\n",
-      "steps:  22%|██▏       | 22/100 [00:12<00:41,  1.89it/s]\n",
-      "steps:  23%|██▎       | 23/100 [00:12<00:40,  1.89it/s]\n",
-      "steps:  24%|██▍       | 24/100 [00:13<00:40,  1.89it/s]\n",
-      "steps:  25%|██▌       | 25/100 [00:13<00:39,  1.88it/s]\n",
-      "steps:  26%|██▌       | 26/100 [00:14<00:39,  1.89it/s]\n",
-      "steps:  27%|██▋       | 27/100 [00:14<00:38,  1.87it/s]\n",
-      "steps:  28%|██▊       | 28/100 [00:15<00:40,  1.80it/s]\n",
-      "steps:  29%|██▉       | 29/100 [00:16<00:39,  1.78it/s]\n",
-      "steps:  30%|███       | 30/100 [00:16<00:38,  1.84it/s]\n",
-      "steps:  31%|███       | 31/100 [00:17<00:36,  1.88it/s]\n",
-      "steps:  32%|███▏      | 32/100 [00:17<00:35,  1.90it/s]\n",
-      "steps:  33%|███▎      | 33/100 [00:18<00:35,  1.90it/s]\n",
-      "steps:  34%|███▍      | 34/100 [00:18<00:35,  1.88it/s]\n",
-      "steps:  35%|███▌      | 35/100 [00:19<00:34,  1.89it/s]\n",
-      "steps:  36%|███▌      | 36/100 [00:19<00:33,  1.90it/s]\n",
-      "steps:  37%|███▋      | 37/100 [00:20<00:32,  1.91it/s]\n",
-      "steps:  38%|███▊      | 38/100 [00:20<00:33,  1.84it/s]\n",
-      "steps:  39%|███▉      | 39/100 [00:21<00:33,  1.84it/s]\n",
-      "steps:  40%|████      | 40/100 [00:21<00:32,  1.86it/s]\n",
-      "steps:  41%|████      | 41/100 [00:22<00:31,  1.88it/s]\n",
-      "steps:  42%|████▏     | 42/100 [00:22<00:30,  1.90it/s]\n",
-      "steps:  43%|████▎     | 43/100 [00:23<00:29,  1.92it/s]\n",
-      "steps:  44%|████▍     | 44/100 [00:23<00:29,  1.93it/s]\n",
-      "steps:  45%|████▌     | 45/100 [00:24<00:28,  1.94it/s]\n",
-      "steps:  46%|████▌     | 46/100 [00:24<00:27,  1.94it/s]\n",
-      "steps:  47%|████▋     | 47/100 [00:25<00:27,  1.94it/s]\n",
-      "steps:  48%|████▊     | 48/100 [00:26<00:27,  1.92it/s]\n",
-      "steps:  49%|████▉     | 49/100 [00:26<00:26,  1.90it/s]\n",
-      "steps:  50%|█████     | 50/100 [00:27<00:26,  1.85it/s]\n",
-      "steps:  51%|█████     | 51/100 [00:27<00:26,  1.82it/s]\n",
-      "steps:  52%|█████▏    | 52/100 [00:28<00:27,  1.73it/s]\n",
-      "steps:  53%|█████▎    | 53/100 [00:28<00:27,  1.72it/s]\n",
-      "steps:  54%|█████▍    | 54/100 [00:29<00:25,  1.79it/s]\n",
-      "steps:  55%|█████▌    | 55/100 [00:29<00:24,  1.83it/s]\n",
-      "steps:  56%|█████▌    | 56/100 [00:30<00:23,  1.86it/s]\n",
-      "steps:  57%|█████▋    | 57/100 [00:30<00:22,  1.89it/s]\n",
-      "steps:  58%|█████▊    | 58/100 [00:31<00:22,  1.90it/s]\n",
-      "steps:  59%|█████▉    | 59/100 [00:32<00:21,  1.92it/s]\n",
-      "steps:  60%|██████    | 60/100 [00:32<00:20,  1.91it/s]\n",
-      "steps:  61%|██████    | 61/100 [00:33<00:21,  1.80it/s]\n",
-      "steps:  62%|██████▏   | 62/100 [00:33<00:22,  1.70it/s]\n",
-      "steps:  63%|██████▎   | 63/100 [00:34<00:21,  1.71it/s]\n",
-      "steps:  64%|██████▍   | 64/100 [00:34<00:20,  1.74it/s]\n",
-      "steps:  65%|██████▌   | 65/100 [00:35<00:19,  1.80it/s]\n",
-      "steps:  66%|██████▌   | 66/100 [00:35<00:18,  1.84it/s]\n",
-      "steps:  67%|██████▋   | 67/100 [00:36<00:17,  1.88it/s]\n",
-      "steps:  68%|██████▊   | 68/100 [00:37<00:16,  1.90it/s]\n",
-      "steps:  69%|██████▉   | 69/100 [00:37<00:16,  1.86it/s]\n",
-      "steps:  70%|███████   | 70/100 [00:38<00:17,  1.75it/s]\n",
-      "steps:  71%|███████   | 71/100 [00:38<00:17,  1.69it/s]\n",
-      "steps:  72%|███████▏  | 72/100 [00:39<00:17,  1.62it/s]\n",
-      "steps:  73%|███████▎  | 73/100 [00:40<00:16,  1.68it/s]\n",
-      "steps:  74%|███████▍  | 74/100 [00:40<00:14,  1.77it/s]\n",
-      "steps:  75%|███████▌  | 75/100 [00:41<00:13,  1.83it/s]\n",
-      "steps:  76%|███████▌  | 76/100 [00:41<00:12,  1.88it/s]\n",
-      "steps:  77%|███████▋  | 77/100 [00:42<00:12,  1.90it/s]\n",
-      "steps:  78%|███████▊  | 78/100 [00:42<00:11,  1.89it/s]\n",
-      "steps:  79%|███████▉  | 79/100 [00:43<00:11,  1.87it/s]\n",
-      "steps:  80%|████████  | 80/100 [00:43<00:10,  1.88it/s]\n",
-      "steps:  81%|████████  | 81/100 [00:44<00:10,  1.89it/s]\n",
-      "steps:  82%|████████▏ | 82/100 [00:44<00:09,  1.88it/s]\n",
-      "steps:  83%|████████▎ | 83/100 [00:45<00:08,  1.89it/s]\n",
-      "steps:  84%|████████▍ | 84/100 [00:45<00:08,  1.91it/s]\n",
-      "steps:  85%|████████▌ | 85/100 [00:46<00:07,  1.93it/s]\n",
-      "steps:  86%|████████▌ | 86/100 [00:46<00:07,  1.93it/s]\n",
-      "steps:  87%|████████▋ | 87/100 [00:47<00:06,  1.93it/s]\n",
-      "steps:  88%|████████▊ | 88/100 [00:47<00:06,  1.94it/s]\n",
-      "steps:  89%|████████▉ | 89/100 [00:48<00:05,  1.94it/s]\n",
-      "steps:  90%|█████████ | 90/100 [00:48<00:05,  1.93it/s]\n",
-      "steps:  91%|█████████ | 91/100 [00:49<00:04,  1.89it/s]\n",
-      "steps:  92%|█████████▏| 92/100 [00:50<00:04,  1.85it/s]\n",
-      "steps:  93%|█████████▎| 93/100 [00:50<00:03,  1.77it/s]\n",
-      "steps:  94%|█████████▍| 94/100 [00:51<00:03,  1.66it/s]\n",
-      "steps:  95%|█████████▌| 95/100 [00:51<00:02,  1.70it/s]\n",
-      "steps:  96%|█████████▌| 96/100 [00:52<00:02,  1.75it/s]\n",
-      "steps:  97%|█████████▋| 97/100 [00:52<00:01,  1.81it/s]\n",
-      "steps:  98%|█████████▊| 98/100 [00:53<00:01,  1.84it/s]\n",
-      "steps:  99%|█████████▉| 99/100 [00:53<00:00,  1.88it/s]\n",
-      "steps: 100%|██████████| 100/100 [00:55<00:00,  1.25it/s]\n",
-      "steps: 100%|██████████| 100/100 [00:55<00:00,  1.81it/s]\n",
+      "steps:   0%|          | 0/5 [00:00<?, ?it/s]\n",
+      "steps:  20%|██        | 1/5 [00:01<00:05,  1.33s/it]\n",
+      "steps:  40%|████      | 2/5 [00:02<00:03,  1.07s/it]\n",
+      "steps:  60%|██████    | 3/5 [00:03<00:01,  1.01it/s]\n",
+      "steps:  80%|████████  | 4/5 [00:03<00:00,  1.05it/s]\n",
+      "steps: 100%|██████████| 5/5 [00:05<00:00,  1.09s/it]\n",
+      "steps: 100%|██████████| 5/5 [00:05<00:00,  1.07s/it]\n",
       "training completed\n",
+      "\u001b[1;34mwandb\u001b[0m: \n",
+      "\u001b[1;34mwandb\u001b[0m: You can sync this run to the cloud by running:\n",
+      "\u001b[1;34mwandb\u001b[0m: \u001b[1mwandb sync c:\\--DPM-MAIN-DIR--\\windsurf_projects\\Variational-Autoencoder-and-Diffusion-Models-on-Animal-Faces-HQ-dataset__CVA_3\\A3_PartB\\A3_PartB\\wandb\\offline-run-20251128_003945-qjwedou4\u001b[0m\n",
+      "\u001b[1;34mwandb\u001b[0m: Find logs at: \u001b[1;35mwandb\\offline-run-20251128_003945-qjwedou4\\logs\u001b[0m\n",
       "\n",
-      " Test completed successfully!\n"
+      "✅ Test completed successfully! Results saved to: ./test_run_20251128_003941\n"
      ]
     }
    ],
    "source": [
-    "# PART 1: (100 steps, ~10-15 minutes)\n",
+    "# PART 1: (20 steps test) - TIMESTAMPED\n",
     "import subprocess\n",
     "import sys\n",
     "import os\n",
+    "from datetime import datetime\n",
     "\n",
-    "# os.environ['WANDB_MODE'] = 'disabled'\n",
+    "# Create timestamped save folder\n",
+    "timestamp = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
+    "save_folder = f\"./test_run_{timestamp}\"\n",
     "\n",
     "process = subprocess.Popen(\n",
-    "    [sys.executable, 'main.py',\n",
+    "    [sys.executable, '-u', 'main.py',\n",
     "     '--data_path', './data/train',\n",
-    "     '--save_folder', './test_run',\n",
+    "     '--save_folder', save_folder,  # <-- Now timestamped!\n",
     "     '--time_steps', '2',\n",
-    "     '--train_steps', '100',\n",
-    "     '--image_size', '32',\n",
-    "     '--batch_size', '32',\n",
+    "     '--train_steps', '5',\n",
+    "     '--image_size', '16',\n",
+    "     '--batch_size', '16',\n",
     "     '--learning_rate', '1e-3',\n",
     "     '--unet_dim', '16',\n",
-    "     '--save_and_sample_every', '100'],\n",
+    "     '--save_and_sample_every', '1'],\n",
     "    stdout=subprocess.PIPE,\n",
     "    stderr=subprocess.STDOUT,\n",
     "    text=True,\n",
-    "    bufsize=1,\n",
-    "    encoding='utf-8',  # Add UTF-8 encoding\n",
-    "    errors='replace'   # Replace unknown characters with blank\n",
+    "    encoding='utf-8',\n",
+    "    errors='replace'\n",
     ")\n",
     "\n",
     "# Stream output line by line in real-time\n",
@@ -265,14 +179,14 @@
     "return_code = process.wait()\n",
     "\n",
     "if return_code == 0:\n",
-    "    print(\"\\n Test completed successfully!\")\n",
+    "    print(f\"\\n✅ Test completed successfully! Results saved to: {save_folder}\")\n",
     "else:\n",
-    "    print(f\"\\n Test failed with error code: {return_code}\")"
+    "    print(f\"\\n❌ Test failed with error code: {return_code}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
